Day 5: Access Request APIs + Admin Approve/Reject + JWT Setup